[gd_scene load_steps=2 format=3 uid="uid://cyoegyutacpco"]

[ext_resource type="Script" path="res://script/menu.gd" id="1_uhoks"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uhoks")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -85.0
offset_right = 188.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer" groups=["Buttons"]]
layout_mode = 2
text = "Play"

[node name="Controls" type="Button" parent="VBoxContainer" groups=["Buttons"]]
layout_mode = 2
text = "Controls"

[node name="Exit" type="Button" parent="VBoxContainer" groups=["Buttons"]]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
